# BetConsciente

./: BetConsciente.code-workspace  BetConsciente.pro  CMakeLists.txt  Makefile  README.md  appBetConsciente  main.cpp
